--- a/phone.css
+++ b/phone.css
@@ -8,33 +8,37 @@ width: 400px;
 
 width: 410px;
 margin-right: 10px;
-height:75px;
+height:100px;
 text-align: center;
-
+background-color: #F3F3F3;
+margin-top:10px;
 }
 
 .container{
 
 	width:410px;
-	height: 500px;
-	border:2px solid grey;
+	height: 675px;
+	border:2px solid #F3F3F3;
 	border-radius: 10px;
 	margin-left: 100px;
 	margin-top: 100px;
+
+	 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .container_dialer{
 
 	margin-left: 10px;
 }
-
+/*
 #tab_bar{
 
 	width:410px;
 	padding: 10px 20px 10px 0;
+	background-color: green;
 
 }
-
+*/
 #tab_content{
 
 	padding: 0 0 20px 0px;
@@ -47,8 +51,16 @@ text-align: center;
 
 .btn_num{
 	background:white;
-	width:100%;
-	border: 6px solid white;
+	width:70px;
+	height:70px;
+	border: 1px solid grey;
+	border-radius:50%;
+	margin-bottom: 10px;
+	margin-top: 5px;
+
+}
+
+.btn_num:hover{
 
 }
 
@@ -70,6 +82,7 @@ text-align: center;
 	background-color: #5cb85c;
 	border-color: #5cb85c;
 	border-radius:50%;
+	margin-left: 60px;
 }
 
 #btn_dialer:hover{
@@ -100,10 +113,12 @@ text-align: center;
 	color:#fff;
 	background-color: #CF0000;
 	border-color: #CF0000;
+	margin-right: 60px;
+
 }
 
 #btn_addContact{
-
+	margin-top:10px;
 	width: 50%;
 	color:#fff;
 	background-color: #5cb85c;
@@ -112,6 +127,7 @@ text-align: center;
 }
 
 #btn_addContactClear{
+	margin-top:10px;
 	float:right;
 	width:50%;
 	color:#fff;
@@ -138,9 +154,21 @@ text-align: center;
 #tab_1, #tab_2, #tab_3{
 	width:100%;
 	color: black;
-	background-color: #fff;
-	border-bottom: 2px solid grey;
+	background-color: #35B535;
+	border-bottom: 2px solid #4EBC4E;
 	border-radius: 0 0 0 0 ;
+	height:45px;
+	color:#fff;
+}
+
+#tab_1{
+
+	border-radius: 10px 0 0 0 ;
+}
+
+#tab_3{
+
+	border-radius: 0 10px 0 0;
 }
 
 #tab_1:hover,#tab_2:hover,#tab_3:hover{
@@ -150,15 +178,6 @@ text-align: center;
 
 #tab_2:focus,#tab_1:focus,#tab_3:focus{
 	border-bottom-color: green;
-}
-
-.pp{
-
-	border-bottom: 2px solid black;
-}
-
-.btntab:focus {
-  background-color: red;
 }
 
 #tab_contactAdd, #tab_contactList{
