--- a/phone.css
+++ b/phone.css
@@ -1,7 +1,7 @@
 #tab_content{
 
 width: 400px;
-
+height: 100%;
 }
 
 #textbox_dialer{
@@ -13,6 +13,7 @@ text-align: center;
 background-color: #F3F3F3;
 margin-top:10px;
 }
+
 
 .container{
 
@@ -53,7 +54,7 @@ margin-top:10px;
 	background:white;
 	width:70px;
 	height:70px;
-	border: 1px solid grey;
+	border: 1px solid #C7C7C7;
 	border-radius:50%;
 	margin-bottom: 10px;
 	margin-top: 5px;
@@ -67,8 +68,10 @@ margin-top:10px;
 .btn_num2{
 	
 	width:100%;
-	border: 2px solid white;
-
+	
+		background-color: #fff;
+	border-bottom: 1px solid #C7C7C7;
+	border-radius: 0 0 0 0 ;
 }
 
 
@@ -184,4 +187,27 @@ margin-top:10px;
 
 	margin-left: 10px;
 }
+
+#tab_contactList{
+	height:100%;
+}
+
+
+div.wrapper_list{
+	height:80%;
+	overflow-y:scroll;
+}
+
+.contact{
+	 list-style-type: none;
+	 margin: 0;
+  	 padding: 0;
+  
+}
+
+.contact>button:hover{
+	color:green;
+}
+
+
 
